12/02/13: Released as version 1.0
	First public release, pretty much works.