@@ -1,0 +1,2 @@
+# Ignore personal config file
+scrape.conf
