@@ -1,2 +1,6 @@
+12/02/13:
+	Add support for external config file
+	Example config file added
+
 12/02/13: Released as version 1.0
 	First public release, pretty much works.
